[gd_scene load_steps=4 format=3 uid="uid://nj5aw8blfs55"]

[ext_resource type="Script" path="res://Scenes/Objects/CircleOfSacrifices/circle_of_sacrifices.gd" id="1_h3mcf"]
[ext_resource type="PackedScene" uid="uid://cbc76s5cpglmj" path="res://Components/HealthComponent/health_component.tscn" id="2_rxlcw"]
[ext_resource type="PackedScene" uid="uid://2ugv84bjbs6d" path="res://Components/TimerComponent/timer_component.tscn" id="3_fgiic"]

[node name="CircleOfSacrifices" type="CSGBox3D"]
size = Vector3(1.4, 0.059, 1.4)
script = ExtResource("1_h3mcf")

[node name="HealthComponent" parent="." instance=ExtResource("2_rxlcw")]

[node name="TimerComponent" parent="." instance=ExtResource("3_fgiic")]

[node name="Stability" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)

[connection signal="death" from="HealthComponent" to="." method="_on_death"]
[connection signal="health_updated" from="HealthComponent" to="." method="_on_health_updated"]
[connection signal="timeout" from="TimerComponent" to="." method="_on_timeout"]
